--- a/client/src/app/components/place-order.component.html
+++ b/client/src/app/components/place-order.component.html
@@ -4,26 +4,26 @@
   </div>
 </div>
 
-<form>
+<form [formGroup]="userForm" (submit)="processForm()">
   <div class="row mb-2">
     <div class="col">
       <label for="username" class="form-label">Username</label>
-      <input type="text" id="username" class="form-control" placeholder="Registered username">
+      <input type="text" id="username" class="form-control" formControlName="username" placeholder="Registered username">
     </div>
   </div>
   <div class="row mb-2">
     <div class="col">
       <label for="password" class="form-label">Password</label>
-      <input type="password" id="password" class="form-control" placeholder="Valid password">
+      <input type="password" id="password" class="form-control" formControlName="password" placeholder="Valid password">
     </div>
   </div>
   <div class="row mb-5">
     <div class="col">
       <div class="d-flex justify-content-between">
-        <button type="button" class="btn btn-danger">
+        <button type="button" class="btn btn-danger" (click)="clear()">
           Start Over
         </button>
-        <button type="submit" class="btn btn-primary">Confirm</button>
+        <button type="submit" class="btn btn-primary" [disabled]="userForm.invalid">Confirm</button>
       </div>
     </div>
   </div>
@@ -47,18 +47,28 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td> 1 </td>
-          <td> XXX </td>
-          <td> $10 </td>
-          <td> XXX </td>
-          <td> $10 </td>
-        </tr>
+        @for( c of cart; track c){
+          <tr>
+            <td></td>
+            <td>
+              {{ c.name }}
+            </td>
+            <td>
+              {{ c.price }}
+            </td>
+            <td>
+              {{ getQuantity(c) }}
+            </td>
+            <td>
+              {{ getTotalPrice(c.price, getQuantity(c)) }}
+            </td>
+          </tr>
+        }
       </tbody>
       <tfoot>
         <tr>
           <td colspan="4"></td>
-          <td> $10 </td>
+          <td> ${{totalPrice$ | async}} </td>
         </tr>
       </tfoot>
 
