--- a/client/src/app/components/place-order.component.html
+++ b/client/src/app/components/place-order.component.html
@@ -47,7 +47,7 @@
         </tr>
       </thead>
       <tbody>
-        @for( c of cart; track c){
+        @for( c of cartItems; track c){
           <tr>
             <td></td>
             <td>
