--- a/client/src/app/components/place-order.component.html
+++ b/client/src/app/components/place-order.component.html
@@ -47,9 +47,9 @@
         </tr>
       </thead>
       <tbody>
-        @for( c of cartItems; track c){
+        @for( c of cartItems; let idx=$index; track c){
           <tr>
-            <td></td>
+            <td>{{idx}}</td>
             <td>
               {{ c.name }}
             </td>
