--- a/client/src/app/components/menu.component.html
+++ b/client/src/app/components/menu.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-3">
   <div class="col d-flex justify-content-between align-items-center">
-    <div class="fs-1 fw-bold text-primary">Menu (${{totalPrice}})</div>
+    <div class="fs-1 fw-bold text-primary">Menu (${{totalPrice$ | async}})</div>
     <div>
       <button type="button" class="btn btn-primary" [disabled]="disabled" (click)="placeOrder()">
         Place Order ({{cartCount$ | async}})
