--- a/client/src/app/components/place-order.component.html
+++ b/client/src/app/components/place-order.component.html
@@ -49,7 +49,7 @@
       <tbody>
         @for( c of cartItems; let idx=$index; track c){
           <tr>
-            <td>{{idx}}</td>
+            <td>{{idx + 1}}</td>
             <td>
               {{ c.name }}
             </td>
